[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/NodeGraph/NodeGraphEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/NodeGraph/NodeGraphNode.gd" type="Script" id=2]
[ext_resource path="res://addons/NodeGraph/Theme.tres" type="Theme" id=3]
[ext_resource path="res://addons/NodeGraph/Test.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.231373, 0.231373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MyGraphEdit" type="Control" parent="."]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )
allowed_connections = {
1: PoolIntArray( 0 )
}

[node name="MyGraphNode1" type="Container" parent="MyGraphEdit"]
margin_left = 40.0
margin_top = 40.0
margin_right = 157.0
margin_bottom = 103.0
mouse_filter = 1
script = ExtResource( 2 )
position = Vector2( 40, 40 )
size = Vector2( 117, 63 )
port_count = 3
ports/0/type = 0
ports/0/color = Color( 1, 1, 1, 1 )
ports/0/enabled = true
ports/0/horizontal_anchor = 0.0
ports/0/vertical_anchor = 0.5
ports/0/offset = Vector2( 0, 0 )
ports/1/type = 1
ports/1/color = Color( 1, 1, 1, 1 )
ports/1/enabled = true
ports/1/horizontal_anchor = 1.0
ports/1/vertical_anchor = 0.5
ports/1/offset = Vector2( 0, -10 )
ports/2/type = 1
ports/2/color = Color( 1, 1, 1, 1 )
ports/2/enabled = true
ports/2/horizontal_anchor = 1.0
ports/2/vertical_anchor = 0.5
ports/2/offset = Vector2( 0, 10 )

[node name="PanelContainer" type="PanelContainer" parent="MyGraphEdit/MyGraphNode1"]
anchor_right = 1.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MyGraphEdit/MyGraphNode1/PanelContainer"]
margin_right = 117.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="Label" type="Label" parent="MyGraphEdit/MyGraphNode1/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 3.0
margin_right = 112.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Hello, world!"

[node name="MyGraphNode2" type="Container" parent="MyGraphEdit"]
margin_left = 216.0
margin_top = 47.0
margin_right = 316.0
margin_bottom = 97.0
mouse_filter = 1
script = ExtResource( 2 )
position = Vector2( 216, 47 )
size = Vector2( 100, 50 )
port_count = 3
ports/0/type = 0
ports/0/color = Color( 1, 1, 1, 1 )
ports/0/enabled = true
ports/0/horizontal_anchor = 0.0
ports/0/vertical_anchor = 0.5
ports/0/offset = Vector2( 0, -10 )
ports/1/type = 0
ports/1/color = Color( 1, 1, 1, 1 )
ports/1/enabled = true
ports/1/horizontal_anchor = 0.0
ports/1/vertical_anchor = 0.5
ports/1/offset = Vector2( 0, 10 )
ports/2/type = 1
ports/2/color = Color( 1, 1, 1, 1 )
ports/2/enabled = true
ports/2/horizontal_anchor = 1.0
ports/2/vertical_anchor = 0.5
ports/2/offset = Vector2( 0, 0 )

[node name="MyGraphNode3" type="Container" parent="MyGraphEdit"]
margin_left = 366.0
margin_top = 48.0
margin_right = 466.0
margin_bottom = 98.0
mouse_filter = 1
script = ExtResource( 2 )
position = Vector2( 366, 48 )
size = Vector2( 100, 50 )
port_count = 1
ports/0/type = 0
ports/0/color = Color( 1, 1, 1, 1 )
ports/0/enabled = true
ports/0/horizontal_anchor = 0.0
ports/0/vertical_anchor = 0.5
ports/0/offset = Vector2( 0, 0 )

[node name="AddNodePopupMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 38.0
items = [ "Add Node", null, 0, false, false, 0, 0, null, "", false ]

[connection signal="connection_request" from="MyGraphEdit" to="." method="_on_MyGraphEdit_connection_request"]
[connection signal="connection_with_empty" from="MyGraphEdit" to="." method="_on_MyGraphEdit_connection_with_empty"]
[connection signal="disconnection_request" from="MyGraphEdit" to="." method="_on_MyGraphEdit_disconnection_request"]
[connection signal="id_pressed" from="AddNodePopupMenu" to="." method="_on_AddNodePopupMenu_id_pressed"]
